--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -23,13 +23,15 @@
               extensions="hoon"/>
     <lang.parserDefinition language="Hoon"
                            implementationClass="com.ashelkov.hoon.plugin.HoonParserDefinition"/>
+    <lang.syntaxHighlighterFactory language="Hoon"
+                                   implementationClass="com.ashelkov.hoon.plugin.HoonSyntaxHighlighterFactory"/>
+    <colorSettingsPage implementation="com.ashelkov.hoon.plugin.HoonColorSettingsPage"/>
+    <additionalTextAttributes scheme="Default"
+                              file="colorSchemes/Default_Hoon.xml"/>
+    <additionalTextAttributes scheme="Darcula"
+                              file="colorSchemes/Darcula_Hoon.xml"/>
 
     <!--    TODO -->
-
-<!--    <lang.syntaxHighlighterFactory language="Hoon"-->
-<!--                                   implementationClass="org.intellij.sdk.language.SimpleSyntaxHighlighterFactory"/>-->
-
-<!--    <colorSettingsPage implementation="org.intellij.sdk.language.SimpleColorSettingsPage"/>-->
 
 <!--    <annotator language="JAVA"-->
 <!--               implementationClass="org.intellij.sdk.language.SimpleAnnotator"/>-->
